--- a/project.config
+++ b/project.config
@@ -18,3 +18,8 @@
 [access "refs/tags/*"]
 	push = group user/Ankit (ankitsri11)
 	push = +force group user/Ankit (ankitsri11)
+[label "Verified"]
+       function = MaxWithBlock
+       value = -1 Fails
+       value =  0 No score
+       value = +1 Verified
